objects/FSL_SPTechnicians_Stage__c.object
<CustomObject>
    <fields>
        <fullName>FailureReason__c</fullName>
        <label>FailureReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionId__c</fullName>
        <label>PromotionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCode__c</fullName>
        <label>SPCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPRowId__c</fullName>
        <label>SPRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechRowId__c</fullName>
        <externalId>true</externalId>
        <label>TechRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FSL_SPTechnicians_Stage</label>
    <nameField>
        <label>FSL_SPTechnicians_Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL_SPTechnicians_Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>